# ark-usecase

./: .gitignore  Cargo.toml
src/: bintree.rs  main.rs
