[package]
name = "ark-usecase"
version = "0.1.0"
edition = "2024"

[dependencies]
proptest = "1.10.0"
nested-musig2 = { git = "https://github.com/BEULAHEVANJALIN/nested-musig2.git", rev = "df665737b2f23175420478c4216b2f8673d31875" }
crypto-rs = { git = "https://github.com/BEULAHEVANJALIN/crypto-rs", rev = "b0cc48eb5f588370b6ad89b556cff583bbe39ddd" }
colored = "3.1.1"
